2015-08-06  oblivion  <oblivion@case>

	* app/templates/index.html: Fixed rest url for receive speed.
	* config.py: Added SERVICES.
				 Added ALLOWED.
	* app/views.py: Added dynamic building of URLs.
				  : Reverted speed functions to get local values.
				  : Added CORS to all the REST.

2015-08-05  oblivion  <oblivion@case>

	* app/templates/index.html: Update remote host every minute, if there's an error.

2015-08-03  oblivion  <oblivion@case>

	* app/__init__.py: Added logging.
	* app/templates/index.html: Spelling.
								Added configurable port.
								Everything is RESTful.
	* config.py: Added PORT.
				 Added DEBUG.
	* app/views.py: PEP8 fixes.
					Everything is RESTful.
					Added logging.
					Get speed from REST on firewall.
					Resolve host name.